force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_3_Years_Exc_On_Gas_Percent__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_3_Years_Exc_On_Gas_Percent__c</fullName>
    <formula>Grant_Capital_3_Years_Exc_On_Gas__c /  Cost_Cap_Exc_LCH_On_Gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Capital 3 Years Exc On Gas %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>