force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_Total_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_Total_3_Years__c</fullName>
    <label>Grant Capital Total 3 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>