force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_Total_3_Years_Percent__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_Total_3_Years_Percent__c</fullName>
    <formula>Grant_Capital_Total_3_Years__c /  Grant_Total_3_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Capital Total 3 Years %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>