force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_Total_3_Years_Request_Orig__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_Total_3_Years_Request_Orig__c</fullName>
    <formula>(Original_Award_Project_Baseline__r.Baseline_Grant_Capital_Spend__c - Grant_Capital_Total_3_Years__c) / Original_Award_Project_Baseline__r.Baseline_Grant_Capital_Spend__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Capital Total 3 Years - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>