force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Total_2526__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_2526__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant Total 25/26</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>