force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Total_25_26_Percent__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_25_26_Percent__c</fullName>
    <formula>Grant_Total_2526__c / Grant_Total_3_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total 25/26 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>