force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Total_26_27_PercVariance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_26_27_PercVariance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( Original_Award_Project_Baseline__r.Grant_Spend_26_27__c - Grant_Total_2627__c ) / Original_Award_Project_Baseline__r.Grant_Spend_26_27__c * -1,
(Current_Award_Baseline__r.Grant_Spend_26_27__c - Grant_Total_2627__c) / Current_Award_Baseline__r.Grant_Spend_26_27__c * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total 26/27 % Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>