force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Total_27_28_Percent__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_27_28_Percent__c</fullName>
    <formula>Grant_Total_2728__c / Grant_Total_3_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total 27/28 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>