force-app/main/default/objects/Change_Control_Tracker__c/fields/GSHP_Req__c.field-meta.xml
<CustomField>
    <fullName>GSHP_Req__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GSHP Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>