force-app/main/default/objects/Change_Control_Tracker__c/fields/GSHP_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>GSHP_Request_Original__c</fullName>
    <formula>(  Parent_Change_Control_Tracker__r.GSHP_Energy__c  -  GSHP_Energy__c  ) / Parent_Change_Control_Tracker__r.GSHP_Energy__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSHP Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>