force-app/main/default/objects/Change_Control_Tracker__c/fields/Homes_To_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>Homes_To_EPC_C__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Homes To EPC C</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>