force-app/main/default/objects/Change_Control_Tracker__c/fields/Homes_To_EPC_C_Request__c.field-meta.xml
<CustomField>
    <fullName>Homes_To_EPC_C_Request__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( Original_Award_Project_Baseline__r.No_of_Homes_to_EPC_C__c  -  Homes_To_EPC_C__c ) / Original_Award_Project_Baseline__r.No_of_Homes_to_EPC_C__c * -1,
(Current_Award_Baseline__r.No_of_Homes_to_EPC_C__c - Homes_To_EPC_C__c) / Current_Award_Baseline__r.No_of_Homes_to_EPC_C__c * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes To EPC C - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>