force-app/main/default/objects/Change_Control_Tracker__c/fields/Homes_To_EPC_C_Variance__c.field-meta.xml
<CustomField>
    <fullName>Homes_To_EPC_C_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( Homes_To_EPC_C__c  -  Original_Award_Project_Baseline__r.No_of_Homes_to_EPC_C__c ),
(Homes_To_EPC_C__c - Current_Award_Baseline__r.No_of_Homes_to_EPC_C__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes To EPC C - Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>