force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_Off_Gas_Incentive_Count_Request__c.field-meta.xml
<CustomField>
    <fullName>LCH_Off_Gas_Incentive_Count_Request__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( Original_Award_Project_Baseline__r.No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c  -  LCH_Off_Gas_Incentive_Count__c ) / Original_Award_Project_Baseline__r.No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c * -1,
(Current_Award_Baseline__r.No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c - LCH_Off_Gas_Incentive_Count__c) / Current_Award_Baseline__r.No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH Off Gas Incentive Count - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>