force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_On_Gas_Incentive_Count__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LCH On Gas Incentive Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>