force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_On_Gas_Incentive_Count_Percent__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Count_Percent__c</fullName>
    <formula>LCH_On_Gas_Incentive_Count__c / Total_Project_Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH On Gas Incentive Count %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>