force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_On_Gas_Incentive_Count_Request_Origi__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Count_Request_Origi__c</fullName>
    <formula>( Original_Award_Project_Baseline__r.No_of_Homes_for_On_Gas_grid_LCH_Offer__c - LCH_On_Gas_Incentive_Count__c ) / Original_Award_Project_Baseline__r.No_of_Homes_for_On_Gas_grid_LCH_Offer__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH On Gas Incentive Count - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>