force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_On_Gas_Incentive_Count_Variance__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Count_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( LCH_On_Gas_Incentive_Count__c -  Original_Award_Project_Baseline__r.No_of_Homes_for_On_Gas_grid_LCH_Offer__c ),
(LCH_On_Gas_Incentive_Count__c - Current_Award_Baseline__r.No_of_Homes_for_On_Gas_grid_LCH_Offer__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCH On Gas Incentive Count - Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>