force-app/main/default/objects/Change_Control_Tracker__c/fields/LCH_On_Gas_Incentive_Guidance_Met__c.field-meta.xml
<CustomField>
    <fullName>LCH_On_Gas_Incentive_Guidance_Met__c</fullName>
    <formula>IF(AND(LCH_On_Gas_Incentive_Count_Percent__c &lt;= 0.10, LCH_On_Gas_Incentive_Count_Percent__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is LCH On Gas Incentive Count 10% or under?</inlineHelpText>
    <label>LCH On Gas Incentive - Guidance Met?</label>
    <type>Text</type>
</CustomField>