force-app/main/default/objects/Change_Control_Tracker__c/fields/Original_Award_Project_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Original_Award_Project_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Award Project Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Change Control Trackers</relationshipLabel>
    <relationshipName>Change_Control_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>