force-app/main/default/objects/Change_Control_Tracker__c/fields/Parent_Change_Control_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Parent_Change_Control_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Change Control Tracker record that&apos;s linked to the &quot;Original Project Baseline&quot;.</description>
    <label>Parent Change Control Tracker</label>
    <referenceTo>Change_Control_Tracker__c</referenceTo>
    <relationshipLabel>Change Control Trackers</relationshipLabel>
    <relationshipName>Change_Control_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>