force-app/main/default/objects/Change_Control_Tracker__c/fields/Pending_Change_Control_Request__c.field-meta.xml
<CustomField>
    <fullName>Pending_Change_Control_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pending Change Control Request</label>
    <referenceTo>FundingAwardAmendment</referenceTo>
    <relationshipLabel>Change Control Trackers</relationshipLabel>
    <relationshipName>Change_Control_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>