force-app/main/default/objects/Change_Control_Tracker__c/fields/SGL_Energy__c.field-meta.xml
<CustomField>
    <fullName>SGL_Energy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SGL Energy</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>