force-app/main/default/objects/Change_Control_Tracker__c/fields/Starting_EPC_C_Or_Above__c.field-meta.xml
<CustomField>
    <fullName>Starting_EPC_C_Or_Above__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting EPC C Or Above</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>