force-app/main/default/objects/Change_Control_Tracker__c/fields/Starting_EPC_C_Or_Above_Guidance_Met__c.field-meta.xml
<CustomField>
    <fullName>Starting_EPC_C_Or_Above_Guidance_Met__c</fullName>
    <formula>IF(AND( Starting_EPC_C_Or_Above_Percent__c  &lt;= 0.10, Starting_EPC_C_Or_Above_Percent__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Starting EPC C Or Above 10% or under?</inlineHelpText>
    <label>Starting EPC C Or Above - Guidance Met?</label>
    <type>Text</type>
</CustomField>