force-app/main/default/objects/Change_Control_Tracker__c/fields/Starting_EPC_C_Or_Above_Percent__c.field-meta.xml
<CustomField>
    <fullName>Starting_EPC_C_Or_Above_Percent__c</fullName>
    <formula>Starting_EPC_C_Or_Above__c / Total_Project_Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting EPC C Or Above %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>