force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_AA_3_Years_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_AA_3_Years_Percent__c</fullName>
    <formula>Total_AA_3_Years__c /  Total_Phase_3_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AA 3 Years %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>