force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_AA_3_Years_Request__c.field-meta.xml
<CustomField>
    <fullName>Total_AA_3_Years_Request__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
((Original_Award_Project_Baseline__r.Baseline_Co_funding_A_A_spend__c + Original_Award_Project_Baseline__r.Baseline_Grant_A_A_Spend__c) -  Total_AA_3_Years__c ) / (Original_Award_Project_Baseline__r.Baseline_Co_funding_A_A_spend__c + Original_Award_Project_Baseline__r.Baseline_Grant_A_A_Spend__c) * -1,

((Current_Award_Baseline__r.Baseline_Co_funding_A_A_spend__c +  Current_Award_Baseline__r.Baseline_Grant_A_A_Spend__c) - Total_AA_3_Years__c) / (Current_Award_Baseline__r.Baseline_Co_funding_A_A_spend__c +  Current_Award_Baseline__r.Baseline_Grant_A_A_Spend__c) * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AA 3 Years - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>