force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_Heat_Pumps__c.field-meta.xml
<CustomField>
    <fullName>Total_Heat_Pumps__c</fullName>
    <formula>ASHP_Energy__c +  GSHP_Energy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Heat Pumps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>