force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_Heat_Pumps_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>Total_Heat_Pumps_Request_Original__c</fullName>
    <formula>( Parent_Change_Control_Tracker__r.Total_Heat_Pumps__c  -  Total_Heat_Pumps__c ) / Parent_Change_Control_Tracker__r.Total_Heat_Pumps__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Heat Pumps - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>