force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_Project_Homes_Treated__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Homes_Treated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Project Homes Treated</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>