force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_Project_Homes_Treated_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Homes_Treated_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
(Total_Project_Homes_Treated__c - Original_Award_Project_Baseline__r.Total_Homes_to_be_Upgraded__c),
(Total_Project_Homes_Treated__c - Current_Award_Baseline__r.Total_Homes_to_be_Upgraded__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Homes Treated - Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>