force-app/main/default/objects/Change_Control_Tracker__c/fields/Total_Spend_Minus_LCH_On_Gas__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_Minus_LCH_On_Gas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Spend Minus LCH On Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>